<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PeerSketch</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_section">Clear All Items</string>
    <string name="action_add_effect">Add SetEffect</string>
    <string name="action_add_forloop">Add ForLoop</string>
    <string name="action_add_makebeat">Add MakeBeat</string>
    <string name="action_add_fitMedia">Add FitMedia</string>
    <string name="title_activity_current_song">CurrentSongActivity</string>
    <string name="title_activity_section_editor">Section Editor</string>
    <string name="title_activity_song_editor">Song Editor</string>
    <string-array name="default_samples">
        <item>"Synth Harp"</item>
        <item>"Clap"</item>
        <item>"Drum Pad"</item>
        <item>"Electro 1"</item>
        <item>"Electro 2"</item>
        <item>"Electro 3"</item>
        <item>"Hi Hats"</item>
        <item>"Organ"</item>
        <item>"Percussion 1"</item>
        <item>"Percussion 2"</item>
    </string-array>
</resources>
