<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="gatech.adam.peersketch.SectionEditorActivity">
    <item
        android:id="@+id/action_add_fitmedia"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_add_fitMedia" />
    <item
        android:id="@+id/action_add_makebeat"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_add_makebeat" />
    <item
        android:id="@+id/action_add_seteffect"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_add_effect" />
    <item
        android:id="@+id/action_add_forloop"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_add_forloop" />
    <item
        android:id="@+id/action_clear_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_clear_section" />
    <item
        android:id="@+id/action_test_seteffect"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="*Test setEffect" />
    <item
        android:id="@+id/action_stop_all_players"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="Stop All Players" />
</menu>
